Bug 1791023 - Use thread-safe refcounting in gfxFontFaceBufferSource. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D157489